--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-requests
-json
-urllib3
-configparser
+certifi==2020.6.20
+chardet==3.0.4
+configparser==5.0.0
+idna==2.10
+requests==2.24.0
+six==1.15.0
+urllib3==1.25.10
+websocket-client-py3==0.15.0
